[gd_scene load_steps=23 format=3 uid="uid://bm2svkssvjhig"]

[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="1_kw7h8"]
[ext_resource type="Script" uid="uid://cwyxluu6q3h2o" path="res://scenes/gui/scr_overworld_menu.gd" id="2_2efj7"]
[ext_resource type="Texture2D" uid="uid://cvy1i8jmiqbbb" path="res://sprites/characters/portraits/spr_portrait_greg.png" id="3_cuvke"]
[ext_resource type="Script" uid="uid://cmin2i5j7iysd" path="res://scenes/tech/scr_reference_button.gd" id="3_srch7"]
[ext_resource type="Script" uid="uid://5ft3meh2ry86" path="res://code/scr_autoscroll_component.gd" id="4_5yxy6"]
[ext_resource type="Texture2D" uid="uid://dy0hfc570u4w0" path="res://sprites/gui/spr_delete_item.png" id="5_buhag"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fklov"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="ImageTexture" id="ImageTexture_beyi1"]

[sub_resource type="ImageTexture" id="ImageTexture_fiwsn"]

[sub_resource type="ImageTexture" id="ImageTexture_mii8h"]

[sub_resource type="ImageTexture" id="ImageTexture_04ncw"]

[sub_resource type="ImageTexture" id="ImageTexture_qm1tc"]

[sub_resource type="ImageTexture" id="ImageTexture_eeqb5"]

[sub_resource type="ImageTexture" id="ImageTexture_r3trb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dwt2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_371id"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.384314, 0.384314, 0.427451, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwejt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.486275, 0.486275, 0.486275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmo2u"]
bg_color = Color(0, 0, 0, 1)
expand_margin_top = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e3uhd"]
blend_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c61xy"]
content_margin_top = 2.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_jniqt"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3xmlp"]
gradient = SubResource("Gradient_jniqt")
width = 8
height = 8
fill_from = Vector2(1, 1)

[node name="OverworldMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kw7h8")
script = ExtResource("2_2efj7")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0.0509804, 0.101961, 0.117647, 0.298039)
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 153.0
offset_bottom = 113.0
metadata/_edit_lock_ = true

[node name="TabContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = -7.0
offset_right = 146.0
offset_bottom = 1.0
theme_override_constants/separation = -1

[node name="Tab1" type="Panel" parent="Panel/TabContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fklov")

[node name="Name" type="Label" parent="Panel/TabContainer/Tab1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 46.0
offset_bottom = 13.0
text = "name"
clip_text = true

[node name="Tab2" type="Panel" parent="Panel/TabContainer"]
z_index = -1
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fklov")

[node name="Name" type="Label" parent="Panel/TabContainer/Tab2"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 46.0
offset_bottom = 13.0
text = "name"
clip_text = true

[node name="Tab3" type="Panel" parent="Panel/TabContainer"]
z_index = -1
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fklov")

[node name="Name" type="Label" parent="Panel/TabContainer/Tab3"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 46.0
offset_bottom = 13.0
text = "name"
clip_text = true

[node name="InfoPanel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 70.0
offset_bottom = 102.0

[node name="MemberInfo" type="Control" parent="Panel/InfoPanel"]
anchors_preset = 0
offset_right = 66.0
offset_bottom = 98.0

[node name="Portrait" type="TextureRect" parent="Panel/InfoPanel/MemberInfo"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 24.0
offset_bottom = 2.0
texture = ExtResource("3_cuvke")
expand_mode = 3
stretch_mode = 2

[node name="MainInfoText" type="RichTextLabel" parent="Panel/InfoPanel/MemberInfo"]
layout_mode = 0
offset_left = 2.0
offset_top = 25.0
offset_right = 65.0
offset_bottom = 96.0
bbcode_enabled = true
text = "
[color=#ff88ff]lvl: %s[/color]
[color=#ff88aa]exp: %s/%s[/color]
[color=#ff8888]atk: %s[/color]
[color=#ffaa88]def: %s[/color]
[color=#ffff88]spd: %s[/color]
[color=#44ff44]hp: %s/%s[/color]
[color=#88ffff]sp: %s/%s[/color]"
shortcut_keys_enabled = false

[node name="MainInfoScroll" type="Node" parent="Panel/InfoPanel/MemberInfo/MainInfoText" node_paths=PackedStringArray("target")]
unique_name_in_owner = true
script = ExtResource("4_5yxy6")
target = NodePath("..")
speed = 1.5
read_time = 1.0

[node name="ItemSpiritTabs" type="TabContainer" parent="Panel"]
modulate = Color(0.533333, 0.533333, 0.533333, 1)
layout_mode = 0
offset_left = 71.0
offset_top = 3.0
offset_right = 144.0
offset_bottom = 104.0
theme_override_icons/increment = SubResource("ImageTexture_beyi1")
theme_override_icons/increment_highlight = SubResource("ImageTexture_fiwsn")
theme_override_icons/decrement = SubResource("ImageTexture_mii8h")
theme_override_icons/decrement_highlight = SubResource("ImageTexture_04ncw")
theme_override_icons/drop_mark = SubResource("ImageTexture_qm1tc")
theme_override_icons/menu = SubResource("ImageTexture_eeqb5")
theme_override_icons/menu_highlight = SubResource("ImageTexture_r3trb")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_2dwt2")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_371id")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_cwejt")
theme_override_styles/panel = SubResource("StyleBoxFlat_371id")
tab_alignment = 1
tab_focus_mode = 0

[node name="items" type="Panel" parent="Panel/ItemSpiritTabs"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Panel/ItemSpiritTabs/items"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 69.0
offset_bottom = 66.0
mouse_filter = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ItemsContainer" type="VBoxContainer" parent="Panel/ItemSpiritTabs/items/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="SilverCounterLabel" type="Label" parent="Panel/ItemSpiritTabs/items"]
layout_mode = 0
offset_left = 2.0
offset_top = 69.0
offset_right = 67.0
offset_bottom = 85.0
theme_override_constants/line_spacing = 0
text = "party silver:
35"

[node name="ColorRect" type="ColorRect" parent="Panel/ItemSpiritTabs/items"]
layout_mode = 0
offset_left = 1.0
offset_top = 67.0
offset_right = 70.0
offset_bottom = 68.0

[node name="spirits" type="Panel" parent="Panel/ItemSpiritTabs"]
visible = false
layout_mode = 2

[node name="UsedSpiritsPanel" type="Panel" parent="Panel/ItemSpiritTabs/spirits"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 69.0
offset_bottom = 42.0

[node name="Scroll" type="ScrollContainer" parent="Panel/ItemSpiritTabs/spirits/UsedSpiritsPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 66.0
offset_bottom = 39.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="UsedSpiritContainer" type="VBoxContainer" parent="Panel/ItemSpiritTabs/spirits/UsedSpiritsPanel/Scroll"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="UnusedSpiritsPanel" type="Panel" parent="Panel/ItemSpiritTabs/spirits"]
layout_mode = 0
offset_left = 2.0
offset_top = 43.0
offset_right = 69.0
offset_bottom = 81.0

[node name="Scroll" type="ScrollContainer" parent="Panel/ItemSpiritTabs/spirits/UnusedSpiritsPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 66.0
offset_bottom = 37.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="UnusedSpiritContainer" type="VBoxContainer" parent="Panel/ItemSpiritTabs/spirits/UnusedSpiritsPanel/Scroll"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="ReferenceButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 22.0
offset_bottom = 13.0
mouse_filter = 2
text = "greg"
flat = true
alignment = 0
script = ExtResource("3_srch7")

[node name="UsingMenu" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0.270588, 0.270588, 0.105882)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="UsingMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 26.0
offset_right = 144.0
offset_bottom = 37.0
theme_override_styles/normal = SubResource("StyleBoxFlat_bmo2u")
text = "using"

[node name="Panel" type="Panel" parent="UsingMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 33.0
offset_right = 144.0
offset_bottom = 73.0

[node name="Portraits" type="HBoxContainer" parent="UsingMenu/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 127.0
offset_bottom = 40.0
theme_override_constants/separation = 10
alignment = 1

[node name="Portrait" type="TextureRect" parent="UsingMenu/Panel/Portraits"]
material = SubResource("CanvasItemMaterial_e3uhd")
layout_mode = 2
texture = ExtResource("3_cuvke")
stretch_mode = 4

[node name="Portrait2" type="TextureRect" parent="UsingMenu/Panel/Portraits"]
material = SubResource("CanvasItemMaterial_e3uhd")
layout_mode = 2
texture = ExtResource("3_cuvke")
stretch_mode = 4

[node name="Portrait3" type="TextureRect" parent="UsingMenu/Panel/Portraits"]
material = SubResource("CanvasItemMaterial_e3uhd")
layout_mode = 2
texture = ExtResource("3_cuvke")
stretch_mode = 4

[node name="Trash" type="TextureRect" parent="UsingMenu/Panel/Portraits"]
material = SubResource("CanvasItemMaterial_e3uhd")
layout_mode = 2
texture = ExtResource("5_buhag")
stretch_mode = 4

[node name="HealthBar" type="ProgressBar" parent="UsingMenu"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 17.0
offset_top = 67.0
offset_right = 143.0
offset_bottom = 69.0
value = 42.72
show_percentage = false

[node name="MagicBar" type="ProgressBar" parent="UsingMenu"]
self_modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 17.0
offset_top = 70.0
offset_right = 143.0
offset_bottom = 72.0
value = 28.82
show_percentage = false

[node name="SaveWarningLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 109.0
offset_right = 160.0
offset_bottom = 120.0
theme_override_styles/normal = SubResource("StyleBoxFlat_c61xy")
text = "press [%s] to save your game."
horizontal_alignment = 1
autowrap_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="SaveWarningLabel"]
position = Vector2(80, -16.5391)
scale = Vector2(20, 4.11523)
texture = SubResource("GradientTexture2D_3xmlp")
